--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ fragnix/cbits/*.o
 fragnix/environment/*
 fragnix/slices/*
 fragnix/temp/*
+environment/
 gui-src/elm/elm-stuff
 tests/*/*/fragnix/*
 tests/quick/**/out
