--- a/fragnix.cabal
+++ b/fragnix.cabal
@@ -20,7 +20,7 @@ common shared-build-depends
   build-depends:       base >=4.6 && <4.15,
                        text >=1.2 && < 1.3,
                        filepath >=1.3 && < 1.6,
-                       directory >=1.3 && < 1.4,
+                       directory >=1.3.1 && < 1.4,
                        process >=1.6 && <1.7,
                        containers >=0.6 && <0.7,
                        haskell-src-exts >=1.23 && <1.24,
@@ -53,6 +53,7 @@ executable fragnix
   import:              shared-build-depends
   main-is:             Main.hs
   other-modules:       Build,
+                       CreateEnv,
                        Paths_fragnix
   build-depends:       clock >=0.8 && <0.9,
                        optparse-applicative >=0.15 && <0.16,
